--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Rudimar Althof
           </p>
           <p class="subtitle">
-            Software Developper
+            Power Platform Developper | IoT Consultant | Software Developper 
           </p>
         </div>
       </div>
@@ -39,20 +39,24 @@
       </p>
     </div>
 
-    <section class="container">
-      <div class="columns features">
+    <section class="container">  
+
+    <h1 class="title">Portifoliio</h1>
+    <h2 class="subtitle">PowerBI and PowerApps projects</h2>
+
+      <div class="columns">
         <div class="column is-4">
           <div class="card is-shady">
             <div class="card-image">
-              <figure class="image is-4by3">
-                <img src="https://static.ndonline.com.br/2012/08/24-08-2012-13-26-57-nd-ciencia-equipe-catarina-1-.jpg" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+              <figure class="image is-4by4">
+                <img src="imgs/vegs.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
-                <h4>Mechatronics Engineering</h4>
+                <h4>Crop Control</h4>
                 <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
-                <span class="button is-link modal-button" data-target="modal-image2">Image modal</span>
+                <span class="button is-link modal-button" data-target="modal-image2">Live Demo</span>
               </div>
             </div>
           </div>
@@ -332,14 +336,22 @@
     </div>
     <!-- end tiny modal card -->
     <!-- Image modal -->
-    <div id="modal-image2" class="modal modal-fx-3dSlit">
-      <div class="modal-background"></div>
-      <div class="modal-content is-huge is-image">
-        <!-- content -->
-        <img src="https://source.unsplash.com/RWnpyGtY1aU" alt="image">
-        <!-- end content -->
-      </div>
-      <button class="modal-close is-large" aria-label="close"></button>
+
+    <div id="modal-image2" class="modal modal-full-screen modal-fx-fadeInScale">
+        <div class="modal-content modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Live Demo - Crop Control</p>
+                <button class="modal-button-close delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+            <!-- Modal card body -->
+              <iframe  frameborder="0" allowFullScreen="true" style="position: absolute; height: 600px; width:80%; left: 10%;" 
+                       src="https://app.powerbi.com/view?r=eyJrIjoiODQ1ZjMyYmUtYzk3ZS00NjBlLThiMjUtMDYzOWJlYzFlNzBiIiwidCI6IjVjOTA0Y2YwLWZhMmMtNDEwYi04YWFiLTBmN2MyZGJiNDkwMCJ9"
+              ></iframe>
+       
+            </section>
+            
+        </div>
     </div>
     <!-- Image modal -->
     <div id="modal-image4" class="modal modal-fx-3dSlit">
