--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="box cta">
       <p class="has-text-centered">
-        <!--span class="tag is-primary">New</span--> For viewing my CV click <a href="#">here</a>.
+        <!--span class="tag is-primary">New</span--> <b>Whant more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
       </p>
     </div>
 
@@ -49,13 +49,13 @@
           <div class="card is-shady">
             <div class="card-image">
               <figure class="image is-4by4">
-                <img src="imgs/vegs.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                <img style="height: 200px;" src="imgs/vegs.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
               </figure>
             </div>
             <div class="card-content">
               <div class="content">
                 <h4>Crop Control</h4>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
+                <p style="min-height: 150px;">Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
                 <span class="button is-link modal-button" data-target="modal-image2">Live Demo</span>
               </div>
             </div>
@@ -65,14 +65,14 @@
           <div class="card is-shady">
             <div class="card-image">
                 <figure class="image is-4by4">
-                    <img src="imgs/emp.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                    <img style="height: 200px;"  src="imgs/emp.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
                   </figure> 
             </div>
             <div class="card-content  modal-button" data-target="modal-card2">
-              <div class="content">
+              <div   class="content">
                 <h4>Employees Overview</h4>
-                <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis.</p>
-                <span class="button is-link modal-button">Modal card</span>
+                <p style="min-height: 150px;" >Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis.</p>
+                <span class="button is-link modal-button">Live Demo</span>
               </div>
             </div>
           </div>
