--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="card is-shady">
             <div class="card-image">
                 <figure class="image is-4by4">
-                    <img style="height: 200px;"  src="imgs/emp.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+                    <img style="height: 200px;"  src="imgs/emp.PNG" alt="Placeholder image" class="modal-button" data-target="modal-card2">
                   </figure> 
             </div>
             <div class="card-content  modal-button" data-target="modal-card2">
