--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="box cta">
       <p class="has-text-centered">
-        <!--span class="tag is-primary">New</span--> <b>Whant more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
+        <!--span class="tag is-primary">New</span--> <b>Want more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
       </p>
     </div>
 
