--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.7.5/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="css/hero.css">
     <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <style>
     .columns:nth-child(2){
         margin-top: -10rem;
@@ -22,22 +23,29 @@
       
     <section class="hero is-info is-small">
       <div class="hero-body">
-        <div class="container has-text-centered">
-          <p class="title">
-            Rudimar Althof
-          </p>
-          <p class="subtitle">
-            Power Platform Developper | IoT Consultant | Software Developper 
-          </p>
-        </div>
+
+        <div class="columns">
+          
+            <div class="column is-12">
+              <div class="container has-text-centered">
+                <p class="title">
+                  Rudimar Althof
+                </p>
+                <p class="subtitle">
+                  Power Platform Developper | IoT Consultant | Software Developper 
+                </p>
+              </div>
+              <div class="box cta">
+                <p class="has-text-centered">
+                  <!--span class="tag is-primary">New</span--> <b>Want more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
+                </p>
+              </div>
+          </div>
+
       </div>
     </section>
 
-    <div class="box cta">
-      <p class="has-text-centered">
-        <!--span class="tag is-primary">New</span--> <b>Want more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
-      </p>
-    </div>
+   
 
     <section class="container">  
 
@@ -81,6 +89,11 @@
             </div>
           </div>
         </div>
+
+        <div class="column is-4">
+          <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rudimar"><a class="LI-simple-link" href='https://br.linkedin.com/in/rudimar?trk=profile-badge'>Rudimar Baesso Althof</a></div>
+        </div>
+
       </div>
     </section>
     <footer>
