--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section class="container">  
 
-    <h1 class="title">Portifoliio</h1>
+    <h1 class="title">Portfolio</h1>
     <h2 class="subtitle">PowerBI and PowerApps projects</h2>
 
       <div class="columns">
