--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
           </div>
         </div>
 
+      </div>
+        <div class="columns">
         <div class="column is-4">
           <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="rudimar"><a class="LI-simple-link" href='https://br.linkedin.com/in/rudimar?trk=profile-badge'>Rudimar Baesso Althof</a></div>
         </div>
