--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       <div class="hero-body">
 
         <div class="columns">
+
           
-            <div class="column is-12">
+            <div class="column is-10">
               <div class="container has-text-centered">
                 <p class="title">
                   Rudimar Althof
@@ -40,6 +41,11 @@
                   <!--span class="tag is-primary">New</span--> <b>Want more details?</b> Get my CV <a href="imgs/EngRudimarCV.pdf">here</a>.
                 </p>
               </div>
+          </div>
+          <div class="column is-2">
+            <figure class="image is-4by4">
+              <img src="imgs/trophy1.PNG" alt="Placeholder image" class="modal-button" data-target="modal-image2">
+            </figure>
           </div>
 
       </div>
